[tool.poetry]
name = "qcore"
version = "1.2.3"
description = "The codebase for running circuit QED experiments in qcrew's lab"
authors = ["Atharv Joshi <atharvjoshi@ymail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "qcore"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PyVISA = "^1.12.0"
Pyro5 = "^5.14"
loguru = "^0.6.0"
pyqtgraph = "^0.13.1"
h5py = "^3.7.0"
PyYAML = "^6.0"
qm-qua = "^1.2.2"
pyqt6 = "^6.5.1"
lmfit = "^1.2.1"
ipykernel = "^6.24.0"
matplotlib = "^3.7.2"
scipy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
